--- a/framework_consumer_feign_80/pom.xml
+++ b/framework_consumer_feign_80/pom.xml
@@ -47,11 +47,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <!--权限security-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--            <version>${spring-boot.version}</version>-->
+<!--        </dependency>-->
         <!--jwt-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -62,7 +62,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <version>2.3.7.RELEASE</version>
         </dependency>
         <!--swagger2-->
         <dependency>
@@ -70,7 +69,11 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>3.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.plugin</groupId>
+            <artifactId>spring-plugin-core</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
