--- a/framework_api/pom.xml
+++ b/framework_api/pom.xml
@@ -42,6 +42,19 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.3.7.RELEASE</version>
         </dependency>
+        <!--Mybatisplus代码自动生成-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity-engine-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
