--- a/framework_provider_hystrix_8003/pom.xml
+++ b/framework_provider_hystrix_8003/pom.xml
@@ -16,13 +16,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
-            <version>1.4.5.RELEASE</version>
+            <version>1.4.6.RELEASE</version>
         </dependency>
-        <!--加入Eureka依赖-->
+        <!--Eureka-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
-            <version>1.4.5.RELEASE</version>
+            <version>1.4.6.RELEASE</version>
         </dependency>
         <!--actuator完善监控信息-->
         <dependency>
