--- a/framework_api/pom.xml
+++ b/framework_api/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.3.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.20</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
