--- a/framework_api/pom.xml
+++ b/framework_api/pom.xml
@@ -48,6 +48,12 @@
             <version>1.5.20</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
