--- a/framework_consumer_feign_80/pom.xml
+++ b/framework_consumer_feign_80/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>spring-plugin-core</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
