--- a/framework_provider_hystrix_8001/pom.xml
+++ b/framework_provider_hystrix_8001/pom.xml
@@ -94,6 +94,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.51</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
