--- a/framework_provider_hystrix_8009/pom.xml
+++ b/framework_provider_hystrix_8009/pom.xml
@@ -104,6 +104,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
