--- a/pom.xml
+++ b/pom.xml
@@ -145,5 +145,13 @@
 <!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
