--- a/framework_consumer_feign_80/pom.xml
+++ b/framework_consumer_feign_80/pom.xml
@@ -50,7 +50,7 @@
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--            <version>${spring-boot.version}</version>-->
+<!--            <version>2.3.12.RELEASE</version>-->
 <!--        </dependency>-->
         <!--jwt-->
         <dependency>
