--- a/framework_provider_hystrix_8004/pom.xml
+++ b/framework_provider_hystrix_8004/pom.xml
@@ -110,6 +110,16 @@
             <version>2.8.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.20</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
