--- a/framework_provider_hystrix_8006/src/main/resources/application.yml
+++ b/framework_provider_hystrix_8006/src/main/resources/application.yml
@@ -6,6 +6,23 @@ server:
 spring:
   profiles:
     active: dev
+feign:
+  hystrix:
+    enabled: true
+    #局部配置
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 5000
 # JWT配置
 jwt:
   # 密匙KEY
